--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@iconify-json/carbon": "^1.1.3",
     "@iconify-json/twemoji": "^1.1.3",
+    "@nuxtjs/color-mode": "^3.0.2",
     "@pinia/nuxt": "^0.1.8",
     "@unocss/nuxt": "^0.31.8",
     "@vueuse/nuxt": "^8.3.0",
