--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "nuxt build",
     "start": "node .output/server/index.mjs",
     "prettier": "prettier --write .",
-    "postinstall": "husky install"
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -29,7 +29,7 @@
     "@vueuse/nuxt": "^8.4.2",
     "husky": "^8.0.1",
     "lint-staged": "^12.4.1",
-    "nuxt": "^3.0.0-rc.2",
+    "nuxt": "^3.0.0-rc.3",
     "pnpm": "^7.1.0",
     "prettier": "^2.6.2",
     "typescript": "^4.6.4"
