--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "preview": "nuxi preview",
     "start": "node .output/server/index.mjs",
     "prettier": "prettier --write .",
-    "prepare": "husky install"
+    "prepare": "simple-git-hooks"
   },
   "repository": {
     "type": "git",
@@ -29,16 +29,19 @@
     "@pinia/nuxt": "^0.4.0",
     "@unocss/nuxt": "^0.45.7",
     "@vueuse/nuxt": "^9.1.0",
-    "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "nuxt": "^3.0.0-rc.8",
     "pnpm": "^7.9.0",
     "prettier": "^2.7.1",
+    "simple-git-hooks": "^2.8.0",
     "typescript": "^4.7.4"
   },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm exec lint-staged"
+  },
   "lint-staged": {
-    "*.{js,ts,json,md,vue}": [
-      "prettier --write"
+    "*": [
+      "prettier --write --ignore-unknown"
     ]
   }
 }
