--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "pkg-name",
-  "packageManager": "pnpm@7.9.5",
+  "packageManager": "pnpm@7.12.2",
   "scripts": {
-    "dev": "nuxi dev",
+    "dev": "nuxi dev -o -p 3333",
     "build": "nuxi build",
     "generate": "nuxi generate",
     "preview": "nuxi preview",
     "start": "node .output/server/index.mjs",
     "prettier": "prettier --write .",
     "prepare": "simple-git-hooks",
-    "up": "taze latest -I"
+    "up": "taze latest -I",
+    "nuxi:up": "nuxi upgrade --force"
   },
   "repository": {
     "type": "git",
@@ -21,22 +22,22 @@
   },
   "homepage": "https://github.com/LoTwT/pkg-name#readme",
   "dependencies": {
-    "pinia": "^2.0.20"
+    "pinia": "^2.0.22"
   },
   "devDependencies": {
-    "@iconify-json/carbon": "^1.1.7",
+    "@iconify-json/carbon": "^1.1.8",
     "@iconify-json/twemoji": "^1.1.5",
-    "@nuxtjs/color-mode": "^3.1.4",
-    "@pinia/nuxt": "^0.4.1",
-    "@unocss/nuxt": "^0.45.12",
-    "@vueuse/nuxt": "^9.1.1",
+    "@nuxtjs/color-mode": "^3.1.6",
+    "@pinia/nuxt": "^0.4.2",
+    "@unocss/nuxt": "^0.45.22",
+    "@vueuse/nuxt": "^9.2.0",
     "lint-staged": "^13.0.3",
-    "nuxt": "^3.0.0-rc.8",
-    "pnpm": "^7.9.5",
+    "nuxt": "3.0.0-rc.11",
+    "pnpm": "^7.12.2",
     "prettier": "^2.7.1",
     "simple-git-hooks": "^2.8.0",
-    "taze": "^0.7.6",
-    "typescript": "^4.7.4"
+    "taze": "^0.8.1",
+    "typescript": "^4.8.3"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm exec lint-staged"
