--- a/package.json
+++ b/package.json
@@ -1,40 +1,51 @@
 {
+  "type": "module",
   "private": true,
-  "packageManager": "pnpm@7.17.1",
+  "packageManager": "pnpm@8.10.0",
   "scripts": {
     "build": "nuxi build",
-    "dev": "nuxi dev -o",
-    "start": "node .output/server/index.mjs",
-    "lint": "prettier -c .",
-    "prettier": "prettier --write .",
-    "typecheck": "tsc --noEmit",
-    "postinstall": "nuxi prepare",
+    "dev": "nuxi dev",
+    "dev:pwa": "VITE_PLUGIN_PWA=true nuxi dev",
     "generate": "nuxi generate",
+    "lint": "eslint .",
+    "postinstall": "nuxi prepare",
     "prepare": "simple-git-hooks",
+    "prettier": "prettier --write .",
+    "start": "node .output/server/index.mjs",
+    "start:generate": "npx serve .output/public",
+    "typecheck": "vue-tsc --noEmit",
     "up": "taze latest -I"
   },
   "devDependencies": {
-    "@iconify-json/carbon": "^1.1.11",
-    "@iconify-json/twemoji": "^1.1.6",
-    "@nuxtjs/color-mode": "^3.2.0",
-    "@pinia/nuxt": "^0.4.6",
-    "@unocss/nuxt": "^0.46.5",
-    "@vueuse/nuxt": "^9.6.0",
-    "lint-staged": "^13.0.4",
-    "nuxt": "^3.0.0",
-    "pinia": "^2.0.27",
-    "pnpm": "^7.17.1",
-    "prettier": "^2.8.0",
-    "simple-git-hooks": "^2.8.1",
-    "taze": "^0.8.4",
-    "typescript": "^4.9.3"
+    "@ayingott/eslint-config": "^0.7.3",
+    "@ayingott/prettier-config": "^0.1.2",
+    "@iconify-json/carbon": "^1.1.21",
+    "@iconify-json/twemoji": "^1.1.12",
+    "@nuxtjs/color-mode": "^3.3.0",
+    "@pinia/nuxt": "^0.5.1",
+    "@unocss/eslint-config": "^0.57.1",
+    "@unocss/nuxt": "^0.57.1",
+    "@vite-pwa/nuxt": "^0.1.1",
+    "@vueuse/nuxt": "^10.5.0",
+    "consola": "^3.2.3",
+    "eslint": "^8.52.0",
+    "lint-staged": "^15.0.2",
+    "nuxt": "^3.8.0",
+    "pinia": "^2.1.7",
+    "prettier": "^3.0.3",
+    "simple-git-hooks": "^2.9.0",
+    "taze": "^0.12.0",
+    "typescript": "^5.2.2",
+    "vue-tsc": "^1.8.22"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm exec lint-staged"
   },
   "lint-staged": {
     "*": [
+      "eslint --fix",
       "prettier --write --ignore-unknown"
     ]
-  }
+  },
+  "prettier": "@ayingott/prettier-config"
 }
